# search-stack-exchange

./: .gitignore  Cargo.toml  README.md  download_stackexchange.sh
.github/workflows/: test.yml
src/: embedding.rs  error.rs  lib.rs  main.rs  reader.rs
tests/: cli.rs  integration.rs  small-posts.xml
