[package]
name = "search-stack-exchange"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aleph-alpha-client = "0.3.0"
anyhow = "1.0.64"
atoi = "1.0.0"
clap = { version = "3.2.20", features = ["derive"] }
tokio = { version = "1.15.0", features = ["rt", "macros"] }
quick-xml = "0.24.0"
thiserror = "1.0.32"
ordered-float = "3.0.0"
serde_json = "1.0.85"
serde = "1.0.144"

[dev-dependencies]
lazy_static = "1.4.0"
assert_cli = "0.6.3"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

