[package]
name = "search-stack-exchange"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aleph-alpha-client = "0.5.4"
anyhow = "1.0.64"
atoi = "2.0.0"
clap = { version = "4.1.13", features = ["derive", "env"] }
tokio = { version = "1.15.0", features = ["rt", "macros"] }
quick-xml = { version = "0.28.1", features = [] }
thiserror = "1.0.32"
ordered-float = "3.0.0"
serde_json = "1.0.85"
serde = "1.0.144"

[dev-dependencies]
lazy_static = "1.4.0"
assert_cmd = "2.0.4"
predicates = "3.0.2"
dotenv = "0.15.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

