[package]
name = "search-stack-exchange"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aleph-alpha-client = "0.7.0"
anyhow = "1.0.75"
atoi = "2.0.0"
clap = { version = "4.4.1", features = ["derive", "env"] }
tokio = { version = "1.32.0", features = ["rt", "macros"] }
quick-xml = { version = "0.30.0", features = [] }
thiserror = "1.0.47"
ordered-float = "3.9.1"
serde_json = "1.0.105"
serde = "1.0.188"

[dev-dependencies]
lazy_static = "1.4.0"
assert_cmd = "2.0.12"
predicates = "3.0.3"
dotenv = "0.15.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

